fixing layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body{
     backdrop-filter: blur(4px) saturate(179%);
     -webkit-backdrop-filter: blur(4px) saturate(179%);
     background-color: rgba(255, 255, 255, 0.53);
-    border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
+    height: 100vh;
 }
 *{
     border: 1px solid red;
